# exchange

./: .gitignore  delete_all.sh  deploy.sh  deploy_local.sh  deploy_new_exchange.py  docker_publish.sh
functions/: main.py
orderbook/: Cargo.toml  Dockerfile
orderbook/src/: main.rs
orderbook/src/book/: book.rs  mod.rs  order.rs
orderbook/src/orderbook/: book.rs  mod.rs  order.rs
services/kafka/: kafka-deployment.yaml
services/owner/: Dockerfile  main.py  owner-deployment.yaml  requirements.txt
services/price/: Dockerfile  main.py  price-deployment.yaml  requirements.txt
services/rest_frontend/: main.py  requirements.txt  rest-deployment.yaml  rest-service-old.yaml  rest-service.yaml  test_requests.py
services/secrets/: admin-secrets.yaml  db-secrets.yaml
services/zookeeper/: zookeeper-deployment.yaml  zookeeper-service.yaml
trader/: main.py  price_tracker.py
