[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
uuid = { version = "0.8", features = ["serde", "v1"] }
chrono = "0.4"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }